# brainextractor

./: .gitignore  LICENSE  README.md  pyproject.toml  render.py  requirements.txt  setup.cfg  setup.py  test.py
.github/ISSUE_TEMPLATE/: bug_report.md
brainextractor/: __init__.py  helpers.py  main.py
brainextractor/scripts/: brainextractor.py  brainextractor_render.py
scripts/: brainextractor  brainextractor_render  brainextractor_rendersurface  render.py
