[project]
name = "brainextractor"
description = "brain extraction in python"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT License" }
authors = [{ name = "Andrew Van", email = "vanandrew@wustl.edu" }]
keywords = [
    "python",
    "image-processing",
    "neuroscience",
    "neuroimaging",
    "segmentation",
    "fsl",
    "brain-extraction",
    "skull-stripping",
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Image Processing",
]
urls = { github = "https://github.com/vanandrew/brainextractor" }
version = "0.2.1"
dynamic = ["entry-points"]
dependencies = [
    "numba >= 0.51.2",
    "nibabel >= 3.2.1",
    "trimesh >= 3.8.15",
    "numpy >= 1.19.4",
    "scipy >= 1.5.4",
    "pyrender >= 0.1.43",
]

[project.optional-dependencies]
dev = [
    "black >= 22.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = true

[tool.black]
line-length = 120
target-version = ["py37", "py38", "py39", "py310"]
