[metadata]
name = brainextractor
author = Andrew Van
author_email = vanandrew@wustl.edu
url= https://github.com/vanandrew/brainextractor
version = 0.1.0
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
zip_safe = True
install_requires =
    numba >= 0.51.2
    nibabel >= 3.2.1
    trimesh >= 3.8.15
    numpy >= 1.19.4
    scipy >= 1.5.4
    pyrender >= 0.1.43

[options.extras_require]
dev =
    black >= 20.8b0
all =
    %(dev)s

[pycodestyle]
ignore = E203, W503, E741
max-line-length = 120

